criação do portifolio

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
     </ur>
 
-    <a href="https://www.youtube.com/channel/UCwLzTZd8UZY2iElC790WLww"
+    <a> href="https://www.youtube.com/channel/UCwLzTZd8UZY2iElC790WLww"</a>
     
 </body>
 
