Mudança nas cores

--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfólio Web</title>
+    <style>
+        
+           body { 
+            background-color: rgb(101, 98, 86)
+        }
+        h1, h2 {
+            color: rgb(252, 171, 16)
+        }
+
+
+    </style>
 </head>
 
 <body>
@@ -13,19 +24,18 @@
     <h2>Meu nome é Thales Luan</h2>
     <img src="/Images/265225518_881623082397720_5054907710694767392_n.jpg" alt="Thales Luan ao lado de um carro"
         width="300">
-    <p>Nasci em Santo André-SP mas morei minha vida toda em Mauá, Estudei na E.E Maria Ap. Damo Ferreira. Me formei em 2018</p>
+    <p>Nasci em <strong>Santo André-SP</strong> mas morei minha vida toda em <strong>Mauá-SP</strong>, Estudei na E.E Maria Ap. Damo Ferreira. Me formei
+        em 2018</p>
 
-    <ur>
-        <ul>
 
-            <li>Aprendendo programação</li>
-            <li> sei dirigir</li>
-            <li> <strong> bolo muito bem</strong> </li>
-        </ul>
-    </ur>
+    <ul>
+        <li>Aprendendo programação na Trybe</li>
+        <li>sei dirigir</li>
+        <li>As vezes ando um pouco de Skate</li>
+    </ul>
 
-    <a> href="https://www.youtube.com/channel/UCwLzTZd8UZY2iElC790WLww"</a>
-    
+    <a href="https://www.youtube.com/channel/UCwLzTZd8UZY2iElC790WLww" target="blog que eu gosto"></a>
+
 </body>
 
 </html>
