--- a/index.html
+++ b/index.html
@@ -6,25 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Web</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sono:wght@200;300;400&display=swap" rel="stylesheet">
+
     <style>
-        
-           body { 
+        body {
             background-color: rgb(101, 98, 86)
         }
-        h1, h2 {
+
+        h1,
+        h2 {
+            font-family: 'Sono', sans-serif;
             color: rgb(252, 171, 16)
         }
-
-
     </style>
 </head>
 
 <body>
-    <h1>Olá, seja Bem vindo ao meu portifólio</h1>
+    <h1>Olá, seja Bem vindo ao meu portfólio</h1>
     <h2>Meu nome é Thales Luan</h2>
     <img src="/Images/265225518_881623082397720_5054907710694767392_n.jpg" alt="Thales Luan ao lado de um carro"
         width="300">
-    <p>Nasci em <strong>Santo André-SP</strong> mas morei minha vida toda em <strong>Mauá-SP</strong>, Estudei na E.E Maria Ap. Damo Ferreira. Me formei
+    <p>Nasci em <strong>Santo André-SP</strong> mas morei minha vida toda em <strong>Mauá-SP</strong>, Estudei na E.E
+        Maria Ap. Damo Ferreira. Me formei
         em 2018</p>
 
 
