Adição do botão

--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
             font-family: 'Sono', sans-serif;
             color: rgb(252, 171, 16)
         }
+
+        .button {
+  background-color: rgb(22, 16, 50);
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 50px
+}
     </style>
 </head>
 
@@ -39,7 +53,7 @@
         <li>As vezes ando um pouco de Skate</li>
     </ul>
 
-    <a href="https://www.youtube.com/channel/UCwLzTZd8UZY2iElC790WLww" target="blog que eu gosto"></a>
+    <a class=button href="https://www.youtube.com/@funkyblackcat" > Canal que mais estou assistindo </a>
 
 </body>
 
