--- a/index.html
+++ b/index.html
@@ -9,53 +9,43 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sono:wght@200;300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Sono:wght@200;300;400&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 
-    <style>
-        body {
-            background-color: rgb(43, 158, 179)
-        }
 
-        h1,
-        h2 {
-            font-family: 'Sono', sans-serif;
-            color: rgb(252, 171, 16)
-        }
-
-        .button {
-            background-color: rgb(22, 16, 50);
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 50px
-        }
-
-        h1, h2 {
-            text-align: center;
-        }
-    </style>
 </head>
 
 <body>
-    <h1>Olá, seja Bem vindo ao meu portfólio</h1>
-    <h2>Meu nome é Thales Luan</h2>
-    <img src="/Images/265225518_881623082397720_5054907710694767392_n.jpg" alt="Thales Luan ao lado de um carro"
-        width="300">
-    <p>Nasci em <strong>Santo André-SP</strong> mas morei minha vida toda em <strong>Mauá-SP</strong>, Estudei na E.E
-        Maria Ap. Damo Ferreira. Me formei
-        em 2018</p>
+    <div id="header">
+        <h1>Olá, seja Bem vindo ao meu portfólio</h1>
+        <h2>Meu nome é Thales Luan</h2>
+    </div>
 
+    <div>
+        <div id="img-align">
+            <img src="/Images/265225518_881623082397720_5054907710694767392_n.jpg" alt="Thales Luan ao lado de um carro"
+                width="300">
+        </div>
 
-    <ul>
-        <li>Aprendendo programação na Trybe</li>
-        <li>sei dirigir</li>
-        <li>As vezes ando um pouco de Skate</li>
-    </ul>
+    </div>
+
+    <div class="main-paragraph">
+        <p>Nasci em <strong>Santo André-SP</strong> mas morei minha vida toda em <strong>Mauá-SP</strong>, Estudei na
+            E.E
+            Maria Ap. Damo Ferreira. Me formei
+            em 2018</p>
+    </div>
+
+    <div id="list">
+        <ul>
+            <li>Aprendendo programação na Trybe</li>
+            <li>sei dirigir</li>
+            <li>As vezes ando um pouco de Skate</li>
+        </ul>
+    </div>
 
     <a class=button href="https://www.youtube.com/@funkyblackcat"> Canal que mais estou assistindo </a>
 
