muda a cor do botao

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <li>As vezes ando um pouco de Skate</li>
         </ul>
     </div>
-
-    <a class=button href="https://www.youtube.com/@funkyblackcat"> Canal que mais estou assistindo </a>
-
+    <div class="botao">
+        <a class=button href="https://www.youtube.com/@funkyblackcat"> Canal que mais estou assistindo </a>
+    </div>
 </body>
 
 </html>
