arruma fotos e muda lista

--- a/index.html
+++ b/index.html
@@ -22,28 +22,27 @@
     <div id="header">
         <h1>Olá, seja Bem vindo ao meu portfólio</h1>
         <h2>Meu nome é Thales Luan</h2>
-    </div>
+        <div id="profile-pic">
 
-    <div>
-        <div id="img-align">
             <img src="/Images/265225518_881623082397720_5054907710694767392_n.jpg" alt="Thales Luan ao lado de um carro"
                 width="300">
         </div>
+    </div>
 
     </div>
 
     <div class="main-paragraph">
-        <p>Nasci em <strong>Santo André-SP</strong> mas morei minha vida toda em <strong>Mauá-SP</strong>, Estudei na
-            E.E
-            Maria Ap. Damo Ferreira. Me formei
-            em 2018</p>
+        <p>Nasci em <strong>Santo André-SP</strong> mas morei minha vida toda em <strong>Mauá-SP</strong>, Atualmente
+            estou estudando desenvolvimento web na escola de programação Trybe</p>
     </div>
 
     <div id="list">
         <ul>
-            <li>Aprendendo programação na Trybe</li>
-            <li>sei dirigir</li>
-            <li>As vezes ando um pouco de Skate</li>
+            <li>Javascript</li>
+            <li>Reactr</li>
+            <li>Angular</li>
+            <li>Node Js</li>
+            <li>Python</li>
         </ul>
     </div>
     <div class="botao">
