--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         </div>
     </div>
 
+    <div class="menuLinha">
+        <a href="https://github.com/ThalesLuan" class="button"></a>
+    </div>
+
     </div>
 
     <div class="main-paragraph">
@@ -36,10 +40,16 @@
             estou estudando desenvolvimento web na escola de programação Trybe</p>
     </div>
 
+    <div class="lorenIpsun">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Posuere sollicitudin aliquam ultrices sagittis orci a. Sit amet tellus cras adipiscing enim eu turpis. Quam id leo in vitae. Convallis convallis tellus id interdum velit laoreet. Donec ac odio tempor orci. Egestas congue quisque egestas diam in arcu. Risus at ultrices mi tempus imperdiet nulla malesuada. Fermentum posuere urna nec tincidunt. Consequat id porta nibh venenatis cras. Cursus euismod quis viverra nibh. Donec ac odio tempor orci dapibus. Eget mi proin sed libero enim sed faucibus turpis. Fringilla est ullamcorper eget nulla. Tristique senectus et netus et malesuada fames ac turpis. Praesent tristique magna sit amet purus gravida quis blandit turpis. Feugiat sed lectus vestibulum mattis ullamcorper velit. Amet nulla facilisi morbi tempus. Tincidunt augue interdum velit euismod in pellentesque massa.
+        </p>
+    </div>
+
     <div id="list">
         <ul>
             <li>Javascript</li>
-            <li>Reactr</li>
+            <li>React</li>
             <li>Angular</li>
             <li>Node Js</li>
             <li>Python</li>
